--- a/code.ipynb
+++ b/code.ipynb
@@ -9,14 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data has been written to videos.csv\n"
+      "Data has been written to video6.csv\n"
      ]
     }
    ],
@@ -25,8 +25,8 @@
     "import csv\n",
     "\n",
     "# Đường dẫn tệp JSON đầu vào và tệp CSV đầu ra\n",
-    "input_json_path = 'video.json'  # Thay bằng đường dẫn tệp JSON của bạn\n",
-    "output_csv_path = 'videos.csv'\n",
+    "input_json_path = 'video4.json'  # Thay bằng đường dẫn tệp JSON của bạn\n",
+    "output_csv_path = 'video6.csv'\n",
     "\n",
     "# Đọc dữ liệu từ tệp JSON\n",
     "with open(input_json_path, 'r', encoding='utf-8') as f:\n",
@@ -41,7 +41,7 @@
     "    videos.append({\n",
     "        \"Video ID\": video.get(\"id\"),\n",
     "        \"Title\": snippet.get(\"title\"),\n",
-    "        \"Description\": snippet.get(\"description\"),\n",
+    "        'category_id': snippet.get(\"categoryId\"),\n",
     "        \"Published At\": snippet.get(\"publishedAt\"),\n",
     "        \"Channel Title\": snippet.get(\"channelTitle\"),\n",
     "        \"View Count\": statistics.get(\"viewCount\"),\n",
@@ -51,7 +51,7 @@
     "\n",
     "# Ghi dữ liệu vào tệp CSV\n",
     "with open(output_csv_path, 'w', newline='', encoding='utf-8') as csvfile:\n",
-    "    fieldnames = [\"Video ID\", \"Title\", \"Description\", \"Published At\", \"Channel Title\", \"View Count\", \"Like Count\", \"Comment Count\"]\n",
+    "    fieldnames = [\"Video ID\", \"Title\", \"category_id\", \"Published At\", \"Channel Title\", \"View Count\", \"Like Count\", \"Comment Count\"]\n",
     "    writer = csv.DictWriter(csvfile, fieldnames=fieldnames)\n",
     "\n",
     "    writer.writeheader()\n",
@@ -69,14 +69,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Đã gộp tệp thành công vào merged_file1.csv\n"
+      "Đã gộp tệp thành công vào video123456.csv\n"
      ]
     }
    ],
@@ -96,9 +96,9 @@
     "    print(f\"Đã gộp tệp thành công vào {output_file}\")\n",
     "\n",
     "# Đường dẫn tới các tệp CSV\n",
-    "file1 = \"merged_file.csv\"\n",
-    "file2 = \"video1.csv\"\n",
-    "output_file = \"merged_file1.csv\"\n",
+    "file1 = \"video-csv/video12345.csv\"\n",
+    "file2 = \"video-csv/video6.csv\"\n",
+    "output_file = \"video123456.csv\"\n",
     "\n",
     "# Gọi hàm gộp\n",
     "merge_csv(file1, file2, output_file)\n"
@@ -172,6 +172,43 @@
     "# Thực hiện xử lý và lưu dữ liệu\n",
     "comments_data = process_comments(input_file)\n",
     "save_to_csv(comments_data, output_file)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cột 'Description' đã được xóa.\n",
+      "Tệp mới đã được lưu tại: video1.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Đường dẫn tới file CSV\n",
+    "file_path = \"video.csv\"\n",
+    "output_path = \"video1.csv\"\n",
+    "\n",
+    "# Đọc file CSV\n",
+    "df = pd.read_csv(file_path)\n",
+    "\n",
+    "# Xóa cột theo tên\n",
+    "column_to_remove = \"Description\"  # Thay \"TenCot\" bằng tên cột bạn muốn xóa\n",
+    "if column_to_remove in df.columns:\n",
+    "    df = df.drop(columns=[column_to_remove])\n",
+    "    print(f\"Cột '{column_to_remove}' đã được xóa.\")\n",
+    "else:\n",
+    "    print(f\"Cột '{column_to_remove}' không tồn tại trong file CSV.\")\n",
+    "\n",
+    "# Lưu lại file CSV đã chỉnh sửa\n",
+    "df.to_csv(output_path, index=False)\n",
+    "print(f\"Tệp mới đã được lưu tại: {output_path}\")\n"
    ]
   }
  ],
