--- a/video.ipynb
+++ b/video.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -380,11 +380,11 @@
     }
    ],
    "source": [
-    "Top_10_video_like=df_clean.groupBy(\"Video ID\",\"Title\")\\\n",
+    "Top_10_video_comment=df_clean.groupBy(\"Video ID\",\"Title\")\\\n",
     "                        .agg(sum(\"Comment Count\").alias(\"Total comment\"))\\\n",
     "                        .orderBy(col(\"Total comment\"),ascending=False)\\\n",
     "                        .limit(10)\n",
-    "Top_10_video_like.show()"
+    "Top_10_video_comment.show()"
    ]
   },
   {
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -616,6 +616,7 @@
     }
    ],
    "source": [
+    "from pyspark.sql.functions import expr\n",
     "# Dùng groupBy với selectExpr gián tiếp\n",
     "df_aggregated = df_clean.groupBy(\"Category_ID\").agg(\n",
     "    expr(\"SUM(`Like Count`) as Total_Likes\"),\n",
@@ -641,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -771,8 +772,66 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Top 3 video được xem nhiều nhất mỗi năm "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------+--------------------+-----------+-------------------+----------+----+----+\n",
+      "|   Video ID|               Title|Category_ID|       Published At|View Count|year|rank|\n",
+      "+-----------+--------------------+-----------+-------------------+----------+----+----+\n",
+      "|7txU8f9Dl5c|ĂN BUFFET 5 SAO Ở...|         19|2017-11-03 18:26:06|   5891310|2017|   1|\n",
+      "|4V4KjfmH5vw|ĐẶC SẢN QUÝ HIẾM ...|         19|2017-12-09 17:23:17|   4210885|2017|   2|\n",
+      "|78uRq9DW6Eo|18 món ăn Thái La...|         24|2017-09-27 18:54:32|   3171014|2017|   3|\n",
+      "|5QCsAh9Eays|ĂN NGON & RẺ KHÔN...|         19|2018-05-25 18:57:58|   7891063|2018|   1|\n",
+      "|O8nVnHlmhCM|CHỢ CHÂU ĐỐC • TH...|         19|2018-01-03 18:46:55|   7403760|2018|   2|\n",
+      "|S07VinbxN3g|CUA HOÀNG ĐẾ, BÀO...|         19|2018-12-07 18:15:59|   5235118|2018|   3|\n",
+      "|v32lFxUUV5o|Đám Cưới Miệt Vườ...|         24|2019-11-22 18:30:12|   8107261|2019|   1|\n",
+      "|TyzP2yUATuM|Đám giỗ bên cồn t...|         19|2019-06-22 06:53:05|   6516807|2019|   2|\n",
+      "|a-2iTFdtnvk|Cuộc sống bản Phù...|         19|2019-01-11 19:11:16|   6045537|2019|   3|\n",
+      "|L4HWqGQxIj4|Món ngon sông nướ...|         19|2020-10-25 14:01:39|   5281038|2020|   1|\n",
+      "|rgtYBNml5ts|24h sống trên bè ...|         19|2020-07-20 18:06:50|   4790384|2020|   2|\n",
+      "|r3UJ3Uc9VqM|Nấu ăn cùng n...|         19|2020-02-17 20:43:11|   4709265|2020|   3|\n",
+      "|MZxiqm-JkfY|Bánh đúc thủ công...|         19|2021-07-10 10:50:24|   4924649|2021|   1|\n",
+      "|ENSLITZnc6w|Cuộc sống Năm Căn...|         19|2021-08-07 21:32:35|   4244863|2021|   2|\n",
+      "|6S3pp7oLmog|Du lịch Nghệ An: ...|         19|2021-03-06 20:58:37|   4057795|2021|   3|\n",
+      "|3i3cDuGayqg|🇰🇷Chợ Gwangjang...|         19|2022-12-25 22:30:15|   7680470|2022|   1|\n",
+      "|CRvD8dOBmx8|🇹🇭Ăn sập Tha...|         19|2022-05-09 20:00:15|   5156894|2022|   2|\n",
+      "|ILRRwwnbLyc|Bắc Hà Du Ký P2: ...|         19|2022-07-15 21:07:43|   4737494|2022|   3|\n",
+      "|hK-s3LsZcFc|🇹🇭Chợ đêm biên ...|         19|2023-09-19 21:54:27|   6804373|2023|   1|\n",
+      "|zc3A_CxSyc4|Nấu đám miệt vườn...|         19|2023-08-19 10:26:01|   5575163|2023|   2|\n",
+      "+-----------+--------------------+-----------+-------------------+----------+----+----+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark.sql.window import Window\n",
+    "from pyspark.sql.functions import row_number\n",
+    "\n",
+    "video_with_year=df_clean.drop(\"month\",\"Channel Title\", \"Like Count\", \"Comment Count\")\n",
+    "window_spec=Window.partitionBy(\"year\").orderBy(col(\"View Count\").desc())\n",
+    "rank_video=video_with_year.withColumn(\"rank\", row_number().over(window_spec))\n",
+    "\n",
+    "top_video=rank_video.filter(col(\"rank\")<=3)\n",
+    "result=top_video.orderBy(\"year\")\n",
+    "result.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -790,7 +849,26 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mnotebook controller is DISPOSED. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mnotebook controller is DISPOSED. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": []
   },
   {
@@ -807,6 +885,24 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mnotebook controller is DISPOSED. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mnotebook controller is DISPOSED. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
     }
    ],
    "source": [
@@ -847,6 +943,24 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mnotebook controller is DISPOSED. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mnotebook controller is DISPOSED. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
     }
    ],
    "source": [
@@ -885,6 +999,24 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mnotebook controller is DISPOSED. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mnotebook controller is DISPOSED. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
     }
    ],
    "source": [
